fix overflow of definitions section

--- a/src/components/DefinitionList.css
+++ b/src/components/DefinitionList.css
@@ -7,6 +7,5 @@
 }
 
 section {
-    overflow: hidden;
     padding-bottom: 40px;
 }
